--- a/plugins/indikator/news/models/categories/fields.yaml
+++ b/plugins/indikator/news/models/categories/fields.yaml
@@ -9,30 +9,39 @@ fields:
         required: true
         attributes:
            autofocus: ''
-        span: auto
+        span: storm
+        cssClass: col-lg-6
 
     slug:
         label: indikator.news::lang.form.slug
         required: true
         preset: name
-        span: auto
+        span: storm
+        cssClass: col-lg-6
 
     content:
         label: indikator.news::lang.form.content
         type: richeditor
         size: large
+        span: storm
+        cssClass: col-xs-12
 
 secondaryTabs:
+
     fields:
 
         categoryinfo:
             type: categoryinfo
             context: update
+            span: storm
+            cssClass: col-xs-12
 
         image:
             label: indikator.news::lang.form.image
             type: mediafinder
             mode: image
+            span: storm
+            cssClass: col-xs-12
 
         status:
             label: indikator.news::lang.form.status
@@ -42,7 +51,8 @@ secondaryTabs:
                 1: indikator.news::lang.button.active
                 2: indikator.news::lang.button.inactive
             default: 1
-            span: auto
+            span: storm
+            cssClass: col-xs-6
 
         hidden:
             label: indikator.news::lang.form.hidden
@@ -52,4 +62,5 @@ secondaryTabs:
                 1: indikator.news::lang.form.yes
                 2: indikator.news::lang.form.no
             default: 2
-            span: auto
+            span: storm
+            cssClass: col-xs-6
