--- a/plugins/indikator/news/models/subscribers/fields.yaml
+++ b/plugins/indikator/news/models/subscribers/fields.yaml
@@ -8,36 +8,45 @@ fields:
         label: indikator.news::lang.form.name
         attributes:
            autofocus: ''
-        span: auto
+        span: storm
+        cssClass: col-lg-6
 
     email:
         label: indikator.news::lang.form.email
         required: true
-        span: auto
+        span: storm
+        cssClass: col-lg-6
 
     categories:
         label: indikator.news::lang.menu.categories
         type: relation
-        span: auto
+        span: storm
+        cssClass: col-lg-6
 
     common:
         label: indikator.news::lang.form.comment
         type: textarea
         size: small
-        span: auto
+        span: storm
+        cssClass: col-lg-6
 
 secondaryTabs:
+
     fields:
 
         subscriberinfo:
             type: subscriberinfo
             context: update
+            span: storm
+            cssClass: col-xs-12
 
         locale:
             label: indikator.news::lang.form.locale
             placeholder: indikator.news::lang.form.lang
             comment: indikator.news::lang.form.locale_comment
             commentHtml: true
+            span: storm
+            cssClass: col-xs-12
 
         status:
             label: indikator.news::lang.form.status
@@ -48,3 +57,5 @@ secondaryTabs:
                 2: indikator.news::lang.form.status_unsubscribed
                 3: indikator.news::lang.form.status_pending
             default: 1
+            span: storm
+            cssClass: col-xs-12
